# nettopp-auth-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-deploy-dev.yml  build-deploy.yml  callable-tests.yml  deploy-dev.yml  deploy-prod.yml  develop-tests.yml  get-artifact-repo-path.ignored  get-artifact-repo-path.yml  test-reusable-workflow.ignored  test-reusable-workflow.yml  tests.yml
alembic/: env.py
alembic/versions/: 2022_12_26_0842-0add287f2622_initial_setup.py
src/auth_api/: config.py  main.py  security.py
src/auth_api/api/v1/: __init__.py
src/auth_api/database/: __init__.py  _setup.py
src/auth_api/database/logic/: __init__.py
src/auth_api/database/models/: __init__.py
src/auth_api/models/: __init__.py  token.py  user.py
tests/auth_api/: test_main.py
tests/auth_api/unit_tests/: test_unit__api.py  test_unit__config.py  test_unit__security.py
